--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,59 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/favicon/light/apple-touch-icon.png"
+            media="(prefers-color-scheme: dark)"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/favicon/light/favicon-32x32.png"
+            media="(prefers-color-scheme: dark)"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/favicon/light/favicon-16x16.png"
+            media="(prefers-color-scheme: dark)"
+        />
+        <link
+            rel="manifest"
+            href="/favicon/light/site.webmanifest"
+            media="(prefers-color-scheme: dark)"
+        />
+
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/favicon/dark/apple-touch-icon.png"
+            media="(prefers-color-scheme: light)"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/favicon/dark/favicon-32x32.png"
+            media="(prefers-color-scheme: light)"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/favicon/dark/favicon-16x16.png"
+            media="(prefers-color-scheme: light)"
+        />
+        <link
+            rel="manifest"
+            href="/favicon/dark/site.webmanifest"
+            media="(prefers-color-scheme: light)"
+        />
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>KLEIN</title>
     </head>
